<resources>
    <string name="app_name">ChatBox</string>
    <string name="next_button">Next</string>
    <string name="user_prompt">Choose what you\'d like to say:</string>
    <string name="home_prompt_choose">Choose a conversation:</string>
    <string name="home_page_button">Start Chatting</string>
    <string name="home_badges_heading">Your badges (for perfect conversations):</string>
    <string name="parent_mode">Set Up Chat</string>

    <string name="chat_speak">Say it!</string>

    <string name="user_config">Set Up User</string>
    <string name="create_new_convo">Create a new conversation from selected template</string>
    <string name="create_new_title">Enter title for conversation</string>
    <string name="create_button_text">Create</string>
    <string name="edit_convo">Choose an existing conversation</string>
    <string name="edit_button_text">Edit</string>
    <string name="delete_button_text">Delete</string>
    <string name="enter_title">Enter title for conversation</string>


    <string name="config_input_sentence">Input a sentence</string>
    <string name="config_select_element">Select a turn</string>
    <string name="config_sentence_bank_choose">OR choose from sentence bank</string>
    <string name="config_edit_existing">View/Remove previously selected sentences for this
        turn</string>
    <string name="config_whose_turn">Whose turn is it?</string>
    <string name="config_input_sentence_description">There are two templates to choose from
        that act as a framework for the chat. Each one is made up of pre-defined turns and the
        child\'s selections at various points determines the course of the conversation.
        \nWhen you edit or create a chat you will be shown each element in either green or red boxes.
        The colours flag whether an element has at least one sentence assigned to it or not
        (green for former, red for latter). \n Click on the element to enter the configuration
        screen.
        \n Select each element in turn from the drop down and add one or more sentences/phrases for
        it. \nFor Child turns they will be able to choose from a list of these and for the Agent turns
        one will be chosen at random. \nAll sentences are added to the sentence bank (making them
        available to choose for similar turns in future conversations that you create) as well as
        the chat if they don\'t already exist. You can remove from the sentence bank or just the chat using the -
        buttons.</string>
    <string name="config_guide_head">Show/Hide Guidance</string>

    <string name="dialog_delete_chat">Are you sure you want to delete this chat?</string>
    <string name="dialog_positive_btn">Yes</string>
    <string name="dialog_negative_btn">No</string>

    <string name="view_diagram">View diagram</string>

    <string name="user_config_name_input">Enter your child\'s name:</string>
    <string name="user_config_img_select_prompt">Select an avatar:</string>
    <string name="adult_config_name_input">Enter supervising adult\'s name/title (e.g. Mum,
    Mrs Jones)</string>
    <string name="praise_input">Enter a phrase to praise a perfect conversation</string>
    <string name="reward_target_input">Enter no of perfect conversations to win reward</string>
    <string name="reward_input">Enter reward to be won after above no of perfect
        conversations</string>
</resources>
