<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_input_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/user_config_name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="enter child name"
        app:layout_constraintStart_toEndOf="@+id/name_input_prompt" />

    <TextView
        android:id="@+id/image_select_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/user_config_img_select_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input_prompt" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_avatars"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_select_prompt">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/select_girl_figure"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/girl_figure"
                android:padding="3dp"/>

            <ImageView
                android:id="@+id/select_boy_figure"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/boy_figure_test"
                android:padding="3dp"/>

            <ImageView
                android:id="@+id/select_boy_red"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/boy_red"
                android:padding="3dp"/>

            <ImageView
                android:id="@+id/select_boy_toy"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/boy_toy"
                android:padding="3dp"/>

            <ImageView
                android:id="@+id/select_girl_blue"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/girl_blue"
                android:padding="3dp"/>

            <ImageView
                android:id="@+id/select_girl_pink"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/girl_pink"
                android:padding="3dp"/>

            <ImageView
                android:id="@+id/select_police"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/police"
                android:padding="3dp"/>

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/adult_name_input_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/adult_config_name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_avatars" />

    <EditText
        android:id="@+id/edit_adult_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="enter name"
        app:layout_constraintStart_toEndOf="@+id/adult_name_input_prompt"
        app:layout_constraintTop_toBottomOf="@+id/scroll_avatars" />

    <TextView
        android:id="@+id/praise_input_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/praise_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adult_name_input_prompt" />

    <EditText
        android:id="@+id/edit_praise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:hint="enter praise"
        app:layout_constraintStart_toEndOf="@+id/praise_input_prompt"
        app:layout_constraintTop_toBottomOf="@+id/adult_name_input_prompt" />

    <TextView
        android:id="@+id/reward_input_target__prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/reward_target_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/praise_input_prompt" />

    <EditText
        android:id="@+id/edit_reward_target"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:hint="enter target"
        app:layout_constraintStart_toEndOf="@+id/reward_input_target__prompt"
        app:layout_constraintTop_toBottomOf="@+id/edit_praise" />

    <TextView
        android:id="@+id/reward_input_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/reward_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reward_input_target__prompt" />

    <EditText
        android:id="@+id/edit_reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="enter reward"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/reward_input_prompt"
        app:layout_constraintTop_toBottomOf="@+id/edit_reward_target" />

</android.support.constraint.ConstraintLayout>